# pdm-agent-mvp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/blog/: runtime-not-copilot.md
docs/research/: ball-detection.md
eval/: acoustic_confusion.txt  acoustic_eval_v1.jsonl  acoustic_metrics_rms.json  acoustic_metrics_zscore.json  acoustic_results_zscore.jsonl  build_eval_set.py  calibration.json  calibration_cv_metrics.json  calibration_reliability.json  confusion_baseline.txt  confusion_diagnose.txt  error_analysis.md  eval_v1.jsonl  metrics_baseline.json  metrics_diagnose.json  results_baseline.jsonl  results_diagnose.jsonl  run_acoustic_eval.py  run_calibration.py  run_eval.py
scripts/: ball_detection_experiment.py  generate_figures.py  measure_latency.py  sanity_check_cwru.py
src/pdm_agent/: __init__.py  acoustic.py  acoustic_diagnostic.py  calibration.py  data.py  diagnostic.py  mcp_server.py  opcua_client.py  opcua_mock.py  order_tracking.py  sidecar.py  workflow.py  workorder.py
tests/: test_acoustic_data.py  test_acoustic_diagnostic.py  test_acoustic_workflow.py  test_calibration.py  test_data.py  test_diagnostic.py  test_e2e.py  test_mcp_server.py  test_order_tracking.py  test_sidecar.py  test_smoke.py  test_workflow.py  test_workflow_persistence.py  test_workorder.py
